RESOLVED FIXED130789
REGRESSION (r155977): matrix animations no longer animate
https://bugs.webkit.org/show_bug.cgi?id=130789
Summary REGRESSION (r155977): matrix animations no longer animate
Simon Fraser (smfr)
Reported 2014-03-26 12:10:04 PDT
REGRESSION (r155977): matrix animations no longer animate
Attachments
Patch (5.89 KB, patch)
2014-03-26 12:11 PDT, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2014-03-26 12:11:54 PDT
Simon Fraser (smfr)
Comment 2 2014-03-26 12:37:44 PDT
Note You need to log in before you can comment on or make changes to this bug.