REGRESSION (r155977): matrix animations no longer animate https://bugs.webkit.org/show_bug.cgi?id=130789 <rdar://problem/15650946>

Source/WebCore:

Reviewed by Dean Jackson.

r155977 erroneously removed two lines that set the end points for
matrix animations (used when transform lists don't match), so
put them back.

Also don't repaint when updateContentsScale()
is called and doesn't change the contents scale.

Test: compositing/animation/matrix-animation.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateRootRelativeScale):
(WebCore::GraphicsLayerCA::setTransformAnimationEndpoints):
(WebCore::GraphicsLayerCA::updateContentsScale):

LayoutTests:

Reviewed by Dean Jackson.

Add test for fill-fowards animation with mismatched transform lists.

* compositing/animation/matrix-animation-expected.html: Added.
* compositing/animation/matrix-animation.html: Added.

Canonical link: https://commits.webkit.org/148829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166309 268f45cc-cd09-0410-ab3c-d52691b4dbfc